--- a/requirements.txt
+++ b/requirements.txt
@@ -6,10 +6,10 @@ flask-cors
 webdriver-manager
 PyYAML
 # Flask Framework
-Flask==1.1.2
+Flask>=2.2.2
 selenium==3.0.2
 wheel==0.36.2
-flask-mongoengine==1.0.0
+git+https://github.com/idoshr/flask-mongoengine.git@1.0.1
 # Automated tests
 pytest==3.0.5
 pytest-cov==2.4.0
